Complete notification feature and fix navigation links and buttons alignment issues

--- a/styles/scss/navbar.module.scss
+++ b/styles/scss/navbar.module.scss
@@ -17,6 +17,7 @@
 
   .navLinks {
     display: flex;
+    align-items: center;
 
     a {
       margin-left: 15px;
